@@ -1,33 +1,21 @@
-package YAML::Tiny;
+package Parse::CPAN::Meta;
 
 use strict;
+use Carp 'croak';
 BEGIN {
 	require 5.004;
 	require Exporter;
-	$YAML::Tiny::VERSION   = '1.22';
-	$YAML::Tiny::errstr    = '';
-	@YAML::Tiny::ISA       = qw{ Exporter  };
-	@YAML::Tiny::EXPORT_OK = qw{
-		Load     Dump
-		LoadFile DumpFile
-		freeze   thaw
-		};
+	$Parse::CPAN::Meta::VERSION   = '0.01';
+	@Parse::CPAN::Meta::ISA       = qw{ Exporter      };
+	@Parse::CPAN::Meta::EXPORT_OK = qw{ Load LoadFile };
 }
 
-# Create the main error hash
-my %ERROR = (
-	YAML_PARSE_ERR_NO_FINAL_NEWLINE => "Stream does not end with newline character",
-);
-
-my $ESCAPE_CHAR = '[\\x00-\\x08\\x0b-\\x0d\\x0e-\\x1f\"\n]';
-
-# Escapes for unprintable characters
-my @UNPRINTABLE = qw(
-	z    x01  x02  x03  x04  x05  x06  a
-	x08  t    n    v    f    r    x0e  x0f
-	x10  x11  x12  x13  x14  x15  x16  x17
-	x18  x19  x1a  e    x1c  x1d  x1e  x1f
-);
+# Prototypes
+sub LoadFile ($);
+sub Load     ($);
+sub _scalar  ($$$);
+sub _array   ($$$);
+sub _hash    ($$$);
 
 # Printable characters for escapes
 my %UNESCAPES = (
@@ -36,41 +24,41 @@ my %UNESCAPES = (
 	r => "\x0d", e => "\x1b", '\\' => '\\',
 );
 
-# Create an empty YAML::Tiny object
-sub new {
-	my $class = shift;
-	bless [ @_ ], $class;
-}
+
+
+
+
+#####################################################################
+# Implementation
 
 # Create an object from a file
-sub read {
-	my $class = ref $_[0] ? ref shift : shift;
-
+sub LoadFile ($) {
 	# Check the file
-	my $file = shift or return $class->_error( 'You did not specify a file name' );
-	return $class->_error( "File '$file' does not exist" )              unless -e $file;
-	return $class->_error( "'$file' is a directory, not a file" )       unless -f _;
-	return $class->_error( "Insufficient permissions to read '$file'" ) unless -r _;
+	my $file = shift;
+	croak('You did not specify a file name')            unless $file;
+	croak( "File '$file' does not exist" )              unless -e $file;
+	croak( "'$file' is a directory, not a file" )       unless -f _;
+	croak( "Insufficient permissions to read '$file'" ) unless -r _;
 
 	# Slurp in the file
 	local $/ = undef;
-	open CFG, $file or return $class->_error( "Failed to open file '$file': $!" );
-	my $contents = <CFG>;
-	close CFG;
+	open( CFG, $file ) or croak("Failed to open file '$file': $!");
+	my $yaml = <CFG>;
+	close CFG          or croak("Failed to close file '$file': $!");
 
-	$class->read_string( $contents );
+	# Hand off to the actual parser
+	Load( $yaml );
 }
 
-# Create an object from a string
-sub read_string {
-	my $class = ref $_[0] ? ref shift : shift;
-	my $self  = bless [], $class;
-
-	# Handle special cases
-	return undef unless defined $_[0];
-	return $self unless length $_[0];
+# Parse a document from a string.
+# Doing checks on $_[0] prevents us having to do a string copy.
+sub Load ($) {
+	unless ( defined $_[0] ) {
+		croak("Did not provide a string to Load");
+	}
+	return () unless length $_[0];
 	unless ( $_[0] =~ /[\012\015]+$/ ) {
-		return $class->_error('YAML_PARSE_ERR_NO_FINAL_NEWLINE');
+		croak("Stream does not end with newline character");
 	}
 
 	# Split the file into lines
@@ -84,38 +72,40 @@ sub read_string {
 			# Handle scalar documents
 			shift @lines;
 			if ( defined $1 and $1 !~ /^(?:\#.+|\%YAML:[\d\.]+)$/ ) {
-				push @$self, $self->_read_scalar( "$1", [ undef ], \@lines );
+				push @rv, _scalar( "$1", [ undef ], \@lines );
 				next;
 			}
 		}
 
 		if ( ! @lines or $lines[0] =~ /^---\s*(?:(.+)\s*)?$/ ) {
 			# A naked document
-			push @$self, undef;
+			push @rv, undef;
 
 		} elsif ( $lines[0] =~ /^\s*\-/ ) {
 			# An array at the root
 			my $document = [ ];
-			push @$self, $document;
-			$self->_read_array( $document, [ 0 ], \@lines );
+			push @rv, $document;
+			_array( $document, [ 0 ], \@lines );
 
 		} elsif ( $lines[0] =~ /^(\s*)\w/ ) {
 			# A hash at the root
 			my $document = { };
-			push @$self, $document;
-			$self->_read_hash( $document, [ length($1) ], \@lines );
+			push @rv, $document;
+			_hash( $document, [ length($1) ], \@lines );
 
 		} else {
-			die "YAML::Tiny does not support the line '$lines[0]'";
+			croak("Parse::CPAN::Meta does not support the line '$lines[0]'");
 		}
 	}
 
-	$self;
+	return @rv;
 }
 
 # Deparse a scalar string to the actual scalar
-sub _read_scalar {
-	my ($self, $string, $indent, $lines) = @_;
+sub _scalar ($$$) {
+	my $string = shift;
+	my $indent = shift;
+	my $lines  = shift;
 
 	# Trim trailing whitespace
 	$string =~ s/\s*$//;
@@ -136,9 +126,9 @@ sub _read_scalar {
 		$str =~ s/\\([never\\fartz]|x([0-9a-fA-F]{2}))/(length($1)>1)?pack("H2",$2):$UNESCAPES{$1}/gex;
 		return $str;
 	}
-	if ( $string =~ /^['"]/ ) {
+	if ( $string =~ /^[\'\"]/ ) {
 		# A quote with folding... we don't support that
-		die "YAML::Tiny does not support multi-line quoted scalars";
+		croak("Parse::CPAN::Meta does not support multi-line quoted scalars");
 	}
 
 	# Null hash and array
@@ -155,13 +145,13 @@ sub _read_scalar {
 	return $string unless $string =~ /^[>|]/;
 
 	# Error
-	die "Multi-line scalar content missing" unless @$lines;
+	croak("Multi-line scalar content missing") unless @$lines;
 
 	# Check the indent depth
 	$lines->[0] =~ /^(\s*)/;
 	$indent->[-1] = length("$1");
 	if ( defined $indent->[-2] and $indent->[-1] <= $indent->[-2] ) {
-		die "Illegal line indenting";
+		croak("Illegal line indenting");
 	}
 
 	# Pull the lines
@@ -178,8 +168,10 @@ sub _read_scalar {
 }
 
 # Parse an array
-sub _read_array {
-	my ($self, $array, $indent, $lines) = @_;
+sub _array ($$$) {
+	my $array  = shift;
+	my $indent = shift;
+	my $lines  = shift;
 
 	while ( @$lines ) {
 		# Check for a new document
@@ -190,7 +182,7 @@ sub _read_array {
 		if ( length($1) < $indent->[-1] ) {
 			return 1;
 		} elsif ( length($1) > $indent->[-1] ) {
-			die "Hash line over-indented";
+			croak("Hash line over-indented");
 		}
 
 		if ( $lines->[0] =~ /^(\s*\-\s+)[^\'\"]\S*\s*:(?:\s+|$)/ ) {
@@ -198,12 +190,12 @@ sub _read_array {
 			my $indent2 = length("$1");
 			$lines->[0] =~ s/-/ /;
 			push @$array, { };
-			$self->_read_hash( $array->[-1], [ @$indent, $indent2 ], $lines );
+			_hash( $array->[-1], [ @$indent, $indent2 ], $lines );
 
 		} elsif ( $lines->[0] =~ /^\s*\-(\s*)(.+?)\s*$/ ) {
 			# Array entry with a value
 			shift @$lines;
-			push @$array, $self->_read_scalar( "$2", [ @$indent, undef ], $lines );
+			push @$array, _scalar( "$2", [ @$indent, undef ], $lines );
 
 		} elsif ( $lines->[0] =~ /^\s*\-\s*$/ ) {
 			shift @$lines;
@@ -219,19 +211,19 @@ sub _read_array {
 				} else {
 					# Naked indenter
 					push @$array, [ ];
-					$self->_read_array( $array->[-1], [ @$indent, $indent2 ], $lines );
+					_array( $array->[-1], [ @$indent, $indent2 ], $lines );
 				}
 
 			} elsif ( $lines->[0] =~ /^(\s*)\w/ ) {
 				push @$array, { };
-				$self->_read_hash( $array->[-1], [ @$indent, length("$1") ], $lines );
+				_hash( $array->[-1], [ @$indent, length("$1") ], $lines );
 
 			} else {
-				die "YAML::Tiny does not support the line '$lines->[0]'";
+				croak("Parse::CPAN::Meta does not support the line '$lines->[0]'");
 			}
 
 		} else {
-			die "YAML::Tiny does not support the line '$lines->[0]'";
+			croak("Parse::CPAN::Meta does not support the line '$lines->[0]'");
 		}
 	}
 
@@ -239,8 +231,10 @@ sub _read_array {
 }
 
 # Parse an array
-sub _read_hash {
-	my ($self, $hash, $indent, $lines) = @_;
+sub _hash ($$$) {
+	my $hash   = shift;
+	my $indent = shift;
+	my $lines  = shift;
 
 	while ( @$lines ) {
 		# Check for a new document
@@ -251,73 +245,44 @@ sub _read_hash {
 		if ( length($1) < $indent->[-1] ) {
 			return 1;
 		} elsif ( length($1) > $indent->[-1] ) {
-			die "Hash line over-indented";
+			croak("Hash line over-indented");
 		}
 
 		# Get the key
 		unless ( $lines->[0] =~ s/^\s*([^\'\"][^\n]*?)\s*:(\s+|$)// ) {
-			die "Bad hash line";
+			croak("Bad hash line");
 		}
 		my $key = $1;
 
 		# Do we have a value?
 		if ( length $lines->[0] ) {
 			# Yes
-			$hash->{$key} = $self->_read_scalar( shift(@$lines), [ @$indent, undef ], $lines );
-		} else {
-			# An indent
-			shift @$lines;
-			unless ( @$lines ) {
+			$hash->{$key} = _scalar( shift(@$lines), [ @$indent, undef ], $lines );
+			next;
+		}
+
+		# An indent
+		shift @$lines;
+		unless ( @$lines ) {
+			$hash->{$key} = undef;
+			return 1;
+		}
+		if ( $lines->[0] =~ /^(\s*)-/ ) {
+			$hash->{$key} = [];
+			_array( $hash->{$key}, [ @$indent, length($1) ], $lines );
+		} elsif ( $lines->[0] =~ /^(\s*)./ ) {
+			my $indent2 = length("$1");
+			if ( $indent->[-1] >= $indent2 ) {
+				# Null hash entry
 				$hash->{$key} = undef;
-				return 1;
-			}
-			if ( $lines->[0] =~ /^(\s*)-/ ) {
-				$hash->{$key} = [];
-				$self->_read_array( $hash->{$key}, [ @$indent, length($1) ], $lines );
-			} elsif ( $lines->[0] =~ /^(\s*)./ ) {
-				my $indent2 = length("$1");
-				if ( $indent->[-1] >= $indent2 ) {
-					# Null hash entry
-					$hash->{$key} = undef;
-				} else {
-					$hash->{$key} = {};
-					$self->_read_hash( $hash->{$key}, [ @$indent, length($1) ], $lines );
-				}
+			} else {
+				$hash->{$key} = {};
+				_hash( $hash->{$key}, [ @$indent, length($1) ], $lines );
 			}
 		}
 	}
 
 	return 1;
-}
-
-# Set error
-sub _error {
-	$YAML::Tiny::errstr = $ERROR{$_[1]} ? "$ERROR{$_[1]} ($_[1])" : $_[1];
-	undef;
-}
-
-# Retrieve error
-sub errstr {
-	$YAML::Tiny::errstr;
-}
-
-
-
-
-
-#####################################################################
-# YAML Compatibility
-
-sub Load {
-	my $self = YAML::Tiny->read_string(@_)
-		or Carp::croak("Failed to load YAML document from string");
-	return @$self;	
-}
-
-sub LoadFile {
-	my $self = YAML::Tiny->read($_[0])
-		or Carp::croak("Failed to load YAML document from '" . ($_[0] || '') . "'");
-	return @$self;
 }
 
 1;
@@ -348,113 +313,46 @@ Parse::CPAN::Meta - Parse META.yml and other similar CPAN metadata files
     #############################################
     # In your program
     
-    use YAML::Tiny;
+    use Parse::CPAN::Meta;
     
     # Create a YAML file
-    my $yaml = YAML::Tiny->new;
-    
-    # Open the config
-    $yaml = YAML::Tiny->read( 'file.yml' );
+    my @yaml = Parse::CPAN::Meta::LoadFile( 'Meta.yml' );
     
     # Reading properties
-    my $root = $yaml->[0]->{rootproperty};
-    my $one  = $yaml->[0]->{section}->{one};
-    my $Foo  = $yaml->[0]->{section}->{Foo};
-    
-    # Changing data
-    $yaml->[0]->{newsection} = { this => 'that' }; # Add a section
-    $yaml->[0]->{section}->{Foo} = 'Not Bar!';     # Change a value
-    delete $yaml->[0]->{section};                  # Delete a value or section
-    
-    # Add an entire document
-    $yaml->[1] = [ 'foo', 'bar', 'baz' ];
-    
-    # Save the file
-    $yaml->write( 'file.conf' );
+    my $root = $yaml[0]->{rootproperty};
+    my $one  = $yaml[0]->{section}->{one};
+    my $Foo  = $yaml[0]->{section}->{Foo};
 
 =head1 DESCRIPTION
 
-B<YAML::Tiny> is a perl class for reading and writing YAML-style files,
-written with as little code as possible, reducing load time and memory
-overhead.
+B<Parse::CPAN::Meta> is a parser for META.yml files, based on the
+parser half of L<YAML::Tiny>.
 
-Most of the time it is accepted that Perl applications use a lot
-of memory and modules. The B<::Tiny> family of modules is specifically
-intended to provide an ultralight and zero-dependency alternative to
-many more-thorough standard modules.
+It supports a basic subset of the full YAML specification, enough to
+implement parsing of typical META.yml files, and other similarly simple
+YAML files.
 
-This module is primarily for reading human-written files (like simple
-config files) and generating very simple human-readable files. Note that
-I said B<human-readable> and not B<geek-readable>. The sort of files that
-your average manager or secretary should be able to look at and make
-sense of.
+If you need something with more power, move up to a full YAML parser such
+as L<YAML>, L<YAML::Syck> or L<YAML::LibYAML>.
 
-L<YAML::Tiny> does not generate comments, it won't necesarily preserve the
-order of your hashes, and it will normalise if reading in and writing out
-again.
+Parse::CPAN::Meta provides a very simply API of only two functions, based
+on the YAML functions of the same name. Wherever possible, identical
+calling semantics are used.
 
-It only supports a very basic subset of the full YAML specification.
-
-Usage is targetted at files like Perl's META.yml, for which a small and
-easily-embeddable module is extremely attractive.
-
-Features will only be added if they are human readable, and can be written
-in a few lines of code. Please don't be offended if your request is
-refused. Someone has to draw the line, and for YAML::Tiny that someone is me.
-
-If you need something with more power move up to L<YAML> (4 megabytes of
-memory overhead) or L<YAML::Syck> (275k, but requires libsyck and a C
-compiler).
-
-To restate, L<YAML::Tiny> does B<not> preserve your comments, whitespace, or
-the order of your YAML data. But it should round-trip from Perl structure
-to file and back again just fine.
-
-=head1 METHODS
-
-=head2 new
-
-The constructor C<new> creates and returns an empty C<YAML::Tiny> object.
-
-=head2 read $filename
-
-The C<read> constructor reads a YAML file, and returns a new
-C<YAML::Tiny> object containing the contents of the file. 
-
-Returns the object on success, or C<undef> on error.
-
-When C<read> fails, C<YAML::Tiny> sets an error message internally
-you can recover via C<YAML::Tiny-E<gt>errstr>. Although in B<some>
-cases a failed C<read> will also set the operating system error
-variable C<$!>, not all errors do and you should not rely on using
-the C<$!> variable.
-
-=head2 read_string $string;
-
-The C<read_string> method takes as argument the contents of a YAML file
-(a YAML document) as a string and returns the C<YAML::Tiny> object for
-it.
+All error reporting is done with exceptions (dieing).
 
 =head1 FUNCTIONS
 
-YAML::Tiny implements a number of functions to add compatibility with
-the L<YAML> API. These should be a drop-in replacement, except that
-YAML::Tiny will B<not> export functions by default, and so you will need
-to explicitly import the functions.
+For maintenance clarity, no functions are exported.
 
-=head2 Load
+=head2 Load( $string )
 
-  my @documents = Load(string-containing-a-YAML-stream);
+  my @documents = Load( $string );
 
-Turn YAML into Perl data. This is the opposite of Dump.
-
-Just like L<Storable>'s thaw() function or the eval() function in relation
-to L<Data::Dumper>.
-
-It parses a string containing a valid YAML stream into a list of Perl data
+Parses a string containing a valid YAML stream into a list of Perl data
 structures.
 
-=head2 LoadFile(filepath)
+=head2 LoadFile( $file_name )
 
 Reads the YAML stream from a file instead of a string.
 
@@ -470,11 +368,11 @@ Adam Kennedy E<lt>adamk@cpan.orgE<gt>
 
 =head1 SEE ALSO
 
-L<YAML>, L<YAML::Syck>, L<YAML::Tiny>
+L<YAML::Tiny>, L<YAML>, L<YAML::Syck>
 
 =head1 COPYRIGHT
 
-Copyright 2008 Adam Kennedy.
+Copyright 2006 - 2008 Adam Kennedy.
 
 This program is free software; you can redistribute
 it and/or modify it under the same terms as Perl itself.
